--- a/content/da/post/gf2024.md
+++ b/content/da/post/gf2024.md
@@ -32,7 +32,7 @@ Generalforsamlingen er åben for alle medlemmer uden tilmelding, men af hensyn t
 
 #### Vedtægter
 Husk at forenigens vedtægter altid kan fides på vores hjemmeside
-{{< button text="Læs vedtægter" link="../pdf/HFK_Vedtaegter_2023.pdf" >}}
+{{< button text="Læs vedtægter" link="https://herningfk.dk/pdf/HFK_Vedtaegter_2023.pdf" >}}
 
 Vi **glæder** os til at se jer alle, til en god generalforsamling  
 på vegne af Herning Faldskærmsklub  
