feat(site): update christmas 2023 thing

--- a/content/da/post/jul2023.md
+++ b/content/da/post/jul2023.md
@@ -33,7 +33,7 @@ Det kunne være piv-fedt hvis du brugte dem på:
 - fejre at at det er fredag
 - sprede glæde i klubben 😎
 
-{{< button text="Klik her for at indløse din julegave" link="mailto:thomas@itadvice.dk?subject=[HFK]%20JULEGAVE%20Jeg%20elsker%20faldskærmssporten!&body=Jeg%20vil%20gerne%20spise%20med%20den%2029.%20%0AHilsen%20%20XXXX%20%20<--%20Skriv%20evt.%20dit%20navn%20her.%20😀" >}}
+{{< button text="Klik her for at indløse din julegave" link="mailto:thomas@itadvice.dk?subject=[HFK]%20JULEGAVE%20Jeg%20elsker%20faldskærmssporten!&body=Jeg%20vil%20gerne%20have%20min%20julegave%20sat%20ind%20p%C3%A5%20min%20burble.%0AHilsen%20XXX%20%3C-%20skriv%20dit%20navn%20her😀" >}}
 
 Vi **glæder** os til at se jer alle, 2024 bliver awesome 🤘  
 på vegne af Herning Faldskærmsklub  
