feat(site): update christmas 2023 thing

--- a/content/da/post/jul2023.md
+++ b/content/da/post/jul2023.md
@@ -1,7 +1,7 @@
 ---
 date: 2023-12-21T22:56:00-00:00
 publishDate: 2023-12-21T22:56:00-00:00
-description: "Glædelig jul 2023"
+description: "En lille julehilsen fra HFK. Husk at trykke på linket så du kan få din gave 🎄 🪂 🎁"
 featured_image: "https://res.cloudinary.com/dzanurchx/image/upload/f_auto,q_auto/v1/hfksource/images/hrrldn7pmigtplsfzoxp"
 author: "Thomas Gilbert"
 tags: ["julehilsen", "gaveregn", "undertræet", "nissen", "hfk", "faldskærm", "gave"]
