fix(gf2024): update day

--- a/content/da/post/gf2024.md
+++ b/content/da/post/gf2024.md
@@ -8,7 +8,7 @@ title: "HFK Generalforsamlinge 2024"
 ---
 
 #### Indbydelse til Generalforsamling 2024
-HFK afholder generalforsamling weekenden den 29. februar, det er incl. **lækker** mad og hygge i vores lokaler hos hos Dropzone Denmark.
+HFK afholder generalforsamling torsdag den 29. februar, det er incl. **lækker** mad og hygge i vores lokaler hos hos Dropzone Denmark.
 
 **ALLE** medlemmer er inviteret - så kom med og hør hvad vi har på tapetet til 2024.
 
@@ -20,13 +20,15 @@ HFK afholder generalforsamling weekenden den 29. februar, det er incl. **lækker
 5. Fastsættelse af kontingent
 6. Behandling af indkomne forslag
 7. Nyt fra DZDK v. Peter Svalø ( Kommende aktiviteter og nyheder)
-8. Konverteringer v. Peter Elias ( Hvordan kommer vi i mål med c-certifikat til alle )
+8. Konverteringer v. Peter Elias ( Hvordan kommer vi i mål med c-certifikat til alle ) og lidt om det nye digitale certifikat.
 9. Valg af medlemmer og suppleanter til bestyrelsen jf. vedtægter §8, stk. 5 og stk. 6
 10. Valg af kritisk revisor og revisorsuppleant
 11. Eventuelt
 
 #### Husk:
 Forslag, som ønskes behandlet på generalforsamling skal være indsendt pr. e-mail til bestyrelsen senest to uger inden generalforsamlingens afholdelse. Bestyrelsen udsender senest en uge inden generalforsamlingen den opdaterede dagsorden. Generalforsamlingen kan kun træffe beslutning i spørgsmål, som er optaget på dagsordenen.
+
+Det vil også være muligt at komme i selen i løbet af aftenen, hvis ikke man allerede har fået det gjort for 2024.
 
 #### TILMELDING:
 Generalforsamlingen er åben for alle medlemmer uden tilmelding, men af hensyn til forplejning, skriv da gerne til kokken / formanden i god tid. [(klik her for at tilmelde spisning)](mailto:thomas@itadvice.dk?subject=[HFK]%20GF2024%20Jeg%20spiser%20sgu%20med!&body=Jeg%20vil%20gerne%20spise%20med%20den%2029.%20%0AHilsen%20%20XXXX%20%20<--%20Skriv%20evt.%20dit%20navn%20her.%20😀)
