--- a/content/da/post/gf2024.md
+++ b/content/da/post/gf2024.md
@@ -8,7 +8,7 @@ title: "HFK Generalforsamlinge 2024"
 ---
 
 #### Indbydelse til Generalforsamling 2024
-HFK afholder generalforsamling torsdag den 29. februar, det er incl. **lækker** mad og hygge i vores lokaler hos hos Dropzone Denmark.
+HFK afholder generalforsamling torsdag den 29. februar @ 18:00, det er incl. **lækker** mad og **hygge** i vores lokaler hos hos Dropzone Denmark.
 
 **ALLE** medlemmer er inviteret - så kom med og hør hvad vi har på tapetet til 2024.
 
